Made Changes of scripts

--- a/uncode-creative-multiuse-wordpress-theme.html
+++ b/uncode-creative-multiuse-wordpress-theme.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/StyleMaster.css">
 	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
 	<title>Uncode - Creative Multiuse WordPress Theme - Webface delivery</title>
-	<script type="text/javascript" src="js/jquery-3.1.1.js"></script>
+	<script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
 	<script type="text/javascript" src="js/HomeScript.js"></script>
 </head>
 <body>
