--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/StyleMaster.css">
 	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
 	<title>Webface Delivery - we deliver everything regarding design</title>
-	<script type="text/javascript" src="js/jquery-3.1.1.js"></script>
+	<script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
 	<script type="text/javascript" src="js/HomeScript.js"></script>
 </head>
 <body>
